tests/baselines/reference/assignmentCompatBug5.errors.txt
tests/cases/compiler/assignmentCompatBug5.ts(2,8): error TS2345: Argument of type '{ b: 数字; }' is not assignable to parameter of type '{ a: 数字; }'.
  Object literal may only specify known properties, and 'b' does not exist in type '{ a: 数字; }'.
tests/cases/compiler/assignmentCompatBug5.ts(5,6): error TS2345: Argument of type '文字[]' is not assignable to parameter of type '数字[]'.
  Type '文字' is not assignable to type '数字'.
tests/cases/compiler/assignmentCompatBug5.ts(8,6): error TS2345: Argument of type '(s: 文字) => 无值' is not assignable to parameter of type '(n: 数字) => 数字'.
  Types of parameters 's' and 'n' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/compiler/assignmentCompatBug5.ts(9,6): error TS2345: Argument of type '(n: 数字) => 无值' is not assignable to parameter of type '(n: 数字) => 数字'.
  Type '无值' is not assignable to type '数字'.


==== tests/cases/compiler/assignmentCompatBug5.ts (4 errors) ====
    function foo1(x: { a: number; }) { }
    foo1({ b: 5 });
           ~~~~
!!! error TS2345: Argument of type '{ b: 数字; }' is not assignable to parameter of type '{ a: 数字; }'.
!!! error TS2345:   Object literal may only specify known properties, and 'b' does not exist in type '{ a: 数字; }'.
    
    function foo2(x: number[]) { }
    foo2(["s", "t"]);
         ~~~~~~~~~~
!!! error TS2345: Argument of type '文字[]' is not assignable to parameter of type '数字[]'.
!!! error TS2345:   Type '文字' is not assignable to type '数字'.
    
    function foo3(x: (n: number) =>number) { };
    foo3((s:string) => { });
         ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(s: 文字) => 无值' is not assignable to parameter of type '(n: 数字) => 数字'.
!!! error TS2345:   Types of parameters 's' and 'n' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    foo3((n) => { return; });
         ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(n: 数字) => 无值' is not assignable to parameter of type '(n: 数字) => 数字'.
!!! error TS2345:   Type '无值' is not assignable to type '数字'.
    
    